# zkp_chaum_pedersen

./: Cargo.toml  README.md  docker-compose.yml
zkp_client/: Cargo.toml  Dockerfile  build.rs
zkp_client/proto/: zkp_auth.proto
zkp_client/src/: lib.rs  main.rs  zkp_auth_client.rs
zkp_server/: Cargo.toml  Dockerfile  build.rs
zkp_server/proto/: zkp_auth.proto
zkp_server/src/: lib.rs  main.rs
