[package]
name = "zkp_server"
version = "0.1.0"
edition = "2021"

[dependencies]

tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
num-bigint =  { version ="0.4.3", features = ["rand"] }
once_cell = "1.17.1"
rand = "0.8.5"
num-integer = "0.1.45"
num-traits = "0.2.15"

[build-dependencies]

tonic-build = "0.9"

